add iphone icons, placeholder text & twitter card

--- a/style.css
+++ b/style.css
@@ -209,6 +209,22 @@ div.section-div {
     color: rgba(255,255,255,0.3);
 }
 
+::-webkit-input-placeholder {
+   color: rgba(0,0,0,0.5);
+}
+
+:-moz-placeholder { /* Firefox 18- */
+   color: rgba(0,0,0,0.5);  
+}
+
+::-moz-placeholder {  /* Firefox 19+ */
+   color: rgba(0,0,0,0.5);  
+}
+
+:-ms-input-placeholder {  
+   color: rgba(0,0,0,0.5);  
+}
+
 
 
 @media only screen and (max-width : 480px) {
